--- a/android-sdk/4.2.1.md
+++ b/android-sdk/4.2.1.md
@@ -289,7 +289,7 @@ Settings settings = new Settings("https://demo.expofp.com")
 
 ### withFestivalEventsListener method
 
-Specifies a subscriber for Festival events. Events are described in the [Festival events](#4.2.1-fest-events) chapter.
+Specifies a subscriber for Festival events. Festival events are described in the [Festival events](#4.2.1-fest-events) chapter.
 
 ```java
 Settings settings = new Settings("https://demo.expofp.com")
