--- a/android-sdk/4.2.1.md
+++ b/android-sdk/4.2.1.md
@@ -249,7 +249,7 @@ The Settings class contains all the parameters necessary for the initialization 
 Settings settings = new Settings(url: "https://demo.expofp.com", focusOnLocation: false, focusOnFirstLocation: true);
 ```
 
-### withEventsListener method
+### WithEventsListener method
 
 Specifies a subscriber for plan events. Events are described in the [Events](#4.2.1-events) chapter.
 
@@ -287,7 +287,7 @@ Settings settings = new Settings("https://demo.expofp.com")
                 });
 ```
 
-### withFestivalEventsListener method
+### WithFestivalEventsListener method
 
 Specifies a subscriber for Festival events. Festival events are described in the [Festival events](#4.2.1-fest-events) chapter.
 
@@ -304,7 +304,7 @@ Settings settings = new Settings("https://demo.expofp.com")
                 });
 ```
 
-### withLocationProvider method
+### WithLocationProvider method
 
 Specifies the location provider. The location provider is described in the [Navigation](#4.2.1-navigation) chapter.
 
@@ -313,7 +313,7 @@ Settings settings = new Settings("https://demo.expofp.com")
                 .withLocationProvider(new GpsProvider(getApplication()));
 ```
 
-### withGlobalLocationProvider method
+### WithGlobalLocationProvider method
 
 Specifies that the GlobalLocationProvider should be used. The GlobalLocationProvider is described in the [GlobalLocationProvider](#4.2.1-global-location-provider) chapter.
 
