--- a/android-sdk/4.2.1.md
+++ b/android-sdk/4.2.1.md
@@ -24,7 +24,7 @@ nav_order: 88
 
 ## What's New in ExpoFP Fplan version 4.2.1<a id='4.2.1-what-is-new'></a>
 
-Integration with Festivals has been added.
+Added the ability to focus on the current location when opening the map.
 
 ## Setup<a id='4.2.1-setup'></a>
 
