--- a/ios-sdk/4.2.1.md
+++ b/ios-sdk/4.2.1.md
@@ -30,7 +30,7 @@ parent: iOS SDK
 
 ## What's New in ExpoFP Fplan version 4.2.1<a id='4.2.1-what-is-new'></a>
 
-Integration with Festivals has been added.
+Added the ability to focus on the current location when opening the map.
 
 ## Installation<a id='4.2.1-installation'></a>
 
