--- a/android-sdk/4.2.3.md
+++ b/android-sdk/4.2.3.md
@@ -24,7 +24,7 @@ nav_order: 87
 
 ## What's New in ExpoFP Fplan version 4.2.3<a id='4.2.3-what-is-new'></a>
 
-Added the ability to specify the path to the archive with the offline version of the plan to the init() method. The data archive will be loaded if the Internet connection is poor or absent.
+Added the ability to specify the path to the archive with the offline version of the plan to the init() method. This archive will be loaded in case of poor or no internet connection.
 
 ## Setup<a id='4.2.3-setup'></a>
 
