--- a/ios-sdk/4.2.4.md
+++ b/ios-sdk/4.2.4.md
@@ -1,50 +1,51 @@
 ---
-title: 4.2.3
+title: 4.2.4
 nav_order: 189
 parent: iOS SDK
 ---
-## 4.2.3 version<a id='4.2.3'></a>
+
+## 4.2.4 version<a id='4.2.4'></a>
 
 ## Table of Contents
-* [What's New](#4.2.3-what-is-new)
-* [Installation](#4.2.3-installation)
-* [UIKit](#4.2.3-uikit)
-    * [Usage](#4.2.3-uikit-usage)
-    * [Offline mode](#4.2.3-uikit-offline)
-    * [Settings сlass](#4.2.3-uikit-settings-class)
-    * [Functions](#4.2.3-uikit-functions)
-    * [Events](#4.2.3-uikit-events)
-    * [Festivals](#4.2.3-uikit-fest)
-* [SwiftUI](#4.2.3-swiftui)
-    * [Usage](#4.2.3-swiftui-usage)
-    * [Offline mode](#4.2.3-swiftui-offline)
-    * [Settings сlass](#4.2.3-swiftui-settings-class)
-    * [Functions](#4.2.3-swiftui-functions)
-    * [Events](#4.2.3-swiftui-events)
-    * [Festivals](#4.2.3-swiftui-fest)
-* [Navigation](#4.2.3-navigation)
-* [GlobalLocationProvider](#4.2.3-global-location-provider)
-* [CrowdConnected location provider](#4.2.3-cc-navigation)
-* [IndoorAtlas location provider](#4.2.3-ia-navigation)
-* [ExpoFP-GPS location provider](#4.2.3-efp-navigation)
+* [What's New](#4.2.4-what-is-new)
+* [Installation](#4.2.4-installation)
+* [UIKit](#4.2.4-uikit)
+    * [Usage](#4.2.4-uikit-usage)
+    * [Offline mode](#4.2.4-uikit-offline)
+    * [Settings сlass](#4.2.4-uikit-settings-class)
+    * [Functions](#4.2.4-uikit-functions)
+    * [Events](#4.2.4-uikit-events)
+    * [Festivals](#4.2.4-uikit-fest)
+* [SwiftUI](#4.2.4-swiftui)
+    * [Usage](#4.2.4-swiftui-usage)
+    * [Offline mode](#4.2.4-swiftui-offline)
+    * [Settings сlass](#4.2.4-swiftui-settings-class)
+    * [Functions](#4.2.4-swiftui-functions)
+    * [Events](#4.2.4-swiftui-events)
+    * [Festivals](#4.2.4-swiftui-fest)
+* [Navigation](#4.2.4-navigation)
+* [GlobalLocationProvider](#4.2.4-global-location-provider)
+* [CrowdConnected location provider](#4.2.4-cc-navigation)
+* [IndoorAtlas location provider](#4.2.4-ia-navigation)
+* [ExpoFP-GPS location provider](#4.2.4-efp-navigation)
 
-## What's New in ExpoFP Fplan version 4.2.3<a id='4.2.3-what-is-new'></a>
+## What's New in ExpoFP Fplan version 4.2.4<a id='4.2.4-what-is-new'></a>
 
-Added the ability to focus on the current location when opening the map.
+Added the ability to specify the path to the archive with the offline version of the plan to the load() method. This archive will be loaded in case of poor or no internet connection.
 
-## Installation<a id='4.2.3-installation'></a>
+## Installation<a id='4.2.4-installation'></a>
 
 Cocoapods:
 
 ```swift
-pod 'ExpoFpFplan', '4.2.3'
+pod 'ExpoFpFplan', '4.2.4'
 ```
 
-# UIKit<a id='4.2.3-uikit'></a>
+# UIKit<a id='4.2.4-uikit'></a>
 
 This documentation block describes all the features and functions of ExpoFP SDK for the UIKit platform.
 
-## Usage<a id='4.2.3-uikit-usage'></a>
+## Usage<a id='4.2.4-uikit-usage'></a>
 
 ### Init UIFplanView
 
@@ -80,7 +81,7 @@ To do this, you need to call the 'destroy' function:
 fplanUiView.destoy()
 ```
 
-## Offline mode<a id='4.2.3-uikit-offline'></a>
+## Offline mode<a id='4.2.4-uikit-offline'></a>
 
 ExpoFP SDK provides the following offline modes:
 
@@ -115,19 +116,45 @@ class ViewController: UIViewController {
 }
 ```
 
-## Settings сlass<a id='4.2.3-uikit-settings-class'></a>
+3. In the UIFplanView.load() method, it is possible to specify the path to the offline archive with the plan. This archive will be opened automatically in case of poor or no internet connection.
+
+```swift
+import UIKit
+import ExpoFpFplan
+
+class ViewController: UIViewController {
+    var fplanUiView: UIFplanView!
+
+    override func loadView() {
+        fplanUiView = UIFplanView()
+        self.view = fplanUiView
+    }
+    
+    override func viewDidLoad() {
+        super.viewDidLoad()
+        let zipFilePath = Bundle.main.path(forResource: "Resources.bundle/demo", ofType: "zip")!
+        fplanUiView.load("https://demo.expofp.com/", settings: Settings(), offlineZipFilePath: zipFilePath)
+    }
+
+    override func viewWillDisappear(_ animated: Bool) {
+        fplanUiView.destoy()
+    }
+}
+```
+
+## Settings сlass<a id='4.2.4-uikit-settings-class'></a>
 
 The Settings class contains all the parameters necessary for the initialization and operation of the plan.
 
 ### Parameters passed to the constructor
 
-- locationProvider(LocationProvider, optional) - [location provider](#4.2.3-navigation). The default value for this parameter is nil.
+- locationProvider(LocationProvider, optional) - [location provider](#4.2.4-navigation). The default value for this parameter is nil.
 
 ```swift
 fplanUiView.load("https://demo.expofp.com/", settings: Settings(locationProvider: GpsProvider()))
 ```
 
-- useGlobalLocationProvider(boolean) - a parameter indicating that the [global location provider](#4.2.3-global-location-provider) should be used.
+- useGlobalLocationProvider(boolean) - a parameter indicating that the [global location provider](#4.2.4-global-location-provider) should be used.
   The default value for this parameter is false.
 
 ```swift
@@ -147,7 +174,7 @@ fplanUiView.load("https://demo.expofp.com/", settings: Settings(locationProvider
 fplanUiView.load("https://demo.expofp.com/", settings: Settings(locationProvider: GpsProvider(), focusOnFirstLocation: true))
 ```
 
-## Functions<a id='4.2.3-uikit-functions'></a>
+## Functions<a id='4.2.4-uikit-functions'></a>
 
 Open plan:
 
@@ -191,7 +218,7 @@ Clear floor plan:
 fplanUiView.clear()
 ```
 
-## Events<a id='4.2.3-uikit-events'></a>
+## Events<a id='4.2.4-uikit-events'></a>
 
 ### Floor plan ready event
 
@@ -254,7 +281,7 @@ fplanUiView.setOnExhibitorCustomButtonClickCallback { externalId, buttonNumber, 
 }
 ```
 
-## Festivals<a id='4.2.3-uikit-fest'></a>
+## Festivals<a id='4.2.4-uikit-fest'></a>
 
 ### Init UIFplanView
 
@@ -310,11 +337,11 @@ fplanUiView.setOnFestMoreDetailsClickCallback { id in
 }
 ```
 
-# SwiftUI<a id='4.2.3-swiftui'></a>
+# SwiftUI<a id='4.2.4-swiftui'></a>
 
 This documentation block describes all the features and functions of ExpoFP SDK for the SwiftUI platform.
 
-## Usage<a id='4.2.3-swiftui-usage'></a>
+## Usage<a id='4.2.4-swiftui-usage'></a>
 
 ### Init FplanView
 
@@ -352,7 +379,7 @@ To do this, you need to call the 'destroy' function:
 fplanView.destoy()
 ```
 
-## Offline mode<a id='4.2.3-swiftui-offline'></a>
+## Offline mode<a id='4.2.4-swiftui-offline'></a>
 
 ExpoFP SDK provides the following offline modes:
 
@@ -389,19 +416,47 @@ struct FplanApp: App {
 }
 ```
 
-## Settings сlass<a id='4.2.3-swiftui-settings-class'></a>
+3. In the FplanView.load() method, it is possible to specify the path to the offline archive with the plan. This archive will be opened automatically in case of poor or no internet connection.
+
+```swift
+import SwiftUI
+import ExpoFpFplan
+
+@main
+struct FplanApp: App {
+    
+    var fplanView = FplanView()
+    
+    var body: some Scene {
+        WindowGroup {
+            VStack
+            {
+                fplanView.onAppear{
+                    let zipFilePath = Bundle.main.path(forResource: "Resources.bundle/demo", ofType: "zip")!
+                    fplanView.load("https://demo.expofp.com", settings: Settings(), offlineZipFilePath: zipFilePath)
+                }
+                .onDisappear {
+                    fplanView.destoy()
+                }
+            }
+        }
+    }
+}
+```
+
+## Settings сlass<a id='4.2.4-swiftui-settings-class'></a>
 
 The Settings class contains all the parameters necessary for the initialization and operation of the plan.
 
 ### Parameters passed to the constructor
 
-- locationProvider(LocationProvider, optional) - [location provider](#4.2.3-navigation). The default value for this parameter is nil.
+- locationProvider(LocationProvider, optional) - [location provider](#4.2.4-navigation). The default value for this parameter is nil.
 
 ```swift
 fplanView.load("https://demo.expofp.com/", settings: Settings(locationProvider: GpsProvider()))
 ```
 
-- useGlobalLocationProvider(boolean) - a parameter indicating that the [global location provider](#4.2.3-global-location-provider) should be used. 
+- useGlobalLocationProvider(boolean) - a parameter indicating that the [global location provider](#4.2.4-global-location-provider) should be used. 
   The default value for this parameter is false.
 
 ```swift
@@ -421,7 +476,7 @@ fplanView.load("https://demo.expofp.com/", settings: Settings(locationProvider: 
 fplanView.load("https://demo.expofp.com/", settings: Settings(locationProvider: GpsProvider(), focusOnFirstLocation: true))
 ```
 
-## Functions<a id='4.2.3-swiftui-functions'></a>
+## Functions<a id='4.2.4-swiftui-functions'></a>
 
 Open plan:
 
@@ -464,7 +519,7 @@ Clear floor plan:
 ```swift
 fplanView.clear()
 ```
-## Events<a id='4.2.3-swiftui-events'></a>
+## Events<a id='4.2.4-swiftui-events'></a>
 
 ### Floor plan ready event
 This event is called when the plan initialization process has successfully completed.
@@ -622,7 +677,7 @@ struct FplanApp: App {
 }
 ```
 
-## Festivals<a id='4.2.3-swiftui-fest'></a>
+## Festivals<a id='4.2.4-swiftui-fest'></a>
 
 ### Init FplanView
 
@@ -725,7 +780,7 @@ struct FplanApp: App {
 }
 ```
 
-## Navigation<a id='4.2.3-navigation'></a>
+## Navigation<a id='4.2.4-navigation'></a>
 
 There are 2 ways to use navigation in FplanView. The first way is to explicitly specify the provider. In this case, FplanView will start and stop the LocationProvider on its own.
 
@@ -736,7 +791,7 @@ fplanView.load(URL, locationProvider: locationProvider)
 
 The second way is to run in the background using GlobalLocationProvider when the program starts.
 
-## GlobalLocationProvider<a id='4.2.3-global-location-provider'></a>
+## GlobalLocationProvider<a id='4.2.4-global-location-provider'></a>
 
 Very often needed to run a location provider in the background, ExpoFP SDK has a GlobalLocationProvider for this. The GlobalLocationProvider runs once at program startup and work in the background.
 
@@ -764,14 +819,14 @@ When the program terminates, the GlobalLocationProvider must also be stopped:
 GlobalLocationProvider.stop();
 ```
 
-## CrowdConnected location provider<a id='4.2.3-cc-navigation'></a>
+## CrowdConnected location provider<a id='4.2.4-cc-navigation'></a>
 
 ### Setup
 
 Сocoapods:
 
 ```swift
-pod 'ExpoFpCrowdConnected', '4.2.3'
+pod 'ExpoFpCrowdConnected', '4.2.4'
 ```
 
 Import:
@@ -806,7 +861,7 @@ let locationProvider: LocationProvider = CrowdConnectedProvider(Settings("APP_KE
 
 ### Recommended use
 
-When using CrowdConnectedProvider, it is recommended to run it in the background (when the program starts) using the [GlobalLocationProvider](#4.2.3-global-location-provider).
+When using CrowdConnectedProvider, it is recommended to run it in the background (when the program starts) using the [GlobalLocationProvider](#4.2.4-global-location-provider).
 
 ```swift
 let locationProvider: LocationProvider = CrowdConnectedProvider(Settings("APP_KEY", "TOKEN", "SECRET"))
@@ -841,14 +896,14 @@ settings.addAlias("KEY_2", "VALUE_2")
 let locationProvider: LocationProvider = CrowdConnectedProvider(settings)
 ```
 
-## IndoorAtlas location provider<a id='4.2.3-ia-navigation'></a>
+## IndoorAtlas location provider<a id='4.2.4-ia-navigation'></a>
 
 ### Setup
 
 Сocoapods:
 
 ```swift
-pod 'ExpoFpIndoorAtlas', '4.2.3'
+pod 'ExpoFpIndoorAtlas', '4.2.4'
 ```
 
 Import:
@@ -887,14 +942,14 @@ Permissions(in Info.plist file):
 let locationProvider: LocationProvider = IndoorAtlasProvider(Settings("API_KEY", "API_SECRET_KEY"))
 ```
 
-## ExpoFP-GPS location provider<a id='4.2.3-efp-navigation'></a>
+## ExpoFP-GPS location provider<a id='4.2.4-efp-navigation'></a>
 
 ### Setup
 
 Сocoapods:
 
 ```swift
-pod 'ExpoFpGpsProvider', '4.2.3'
+pod 'ExpoFpGpsProvider', '4.2.4'
 ```
 
 Import:
