--- a/android-sdk/4.2.10.md
+++ b/android-sdk/4.2.10.md
@@ -24,7 +24,7 @@ nav_order: 83
 
 ## What's New in ExpoFP Fplan version 4.2.10<a id='4.2.10-what-is-new'></a>
 
-Bugs fixed.
+Bugs fixed, added 'allowConsent' parameter to the Settings, in the CrowdConnected package, calling the startNavigation() function in GPS_ONLY mode when working in the background.
 
 ## Setup<a id='4.2.10-setup'></a>
 
