--- a/ios-sdk/4.2.11.md
+++ b/ios-sdk/4.2.11.md
@@ -30,7 +30,7 @@ parent: iOS SDK
 
 ## What's New in ExpoFP Fplan version 4.2.11<a id='4.2.11-what-is-new'></a>
 
-Bugs fixed, added 'allowConsent' parameter to the Settings, in the CrowdConnected package, calling the startNavigation() function in GPS_ONLY mode when working in the background.
+Validation of URLs of plan addresses was added.
 
 ## Installation<a id='4.2.11-installation'></a>
 
