--- a/android-sdk/4.2.14.md
+++ b/android-sdk/4.2.14.md
@@ -358,6 +358,18 @@ public void onDirection(@Nullable Route route) {
 }
 ```
 
+##### com.expofp.fplan.Route properties:
+
+* from(RouteBooth) - start booth
+* to(RouteBooth) - destination booth
+* distance(String) - information about distances, for example: 15m
+* time(int) - estimated time to final destination booth in seconds
+
+##### com.expofp.fplan.RouteBooth properties:
+
+* id(String) - booth id
+* name(String) - booth name
+
 #### Receive message event
 Currently not in use.
 
@@ -375,6 +387,14 @@ This event is called when opening a panel with information, it can be a panel wi
 public void onDetails(@Nullable Details details) {
 }
 ```
+
+##### Details properties:
+
+* type(String) - 	"booth" | "exhibitor" | "route"
+* id(String) - 		booth id | exhibitor id | null for route
+* name(String) - 	booth name | exhibitor name | null for route
+* externalId(String) -  booth externalId | exhibitor externalId | null for route
+
 
 #### Exhibitor custom button click event
 This event is called after clicking a custom button in the panel with information about the exhibitor.
@@ -572,19 +592,51 @@ Add permissions in "AndroidManifest.xml" file:
 <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
 ```
 
+#### com.expofp.crowdconnected.Settings
+
+Constructor parameters: 
+
+* appKey(String) -  Your Crowd Connected App Key
+* token(String) - Your Crowd Connected Token
+* secret(String) - Your Crowd Connected Secret
+* mode(Mode) - IPS_ONLY | GPS_ONLY | IPS_AND_GPS
+* aliases(Map<String, String>) - Aliases
+
+Functions:
+
+* enableNavigation() - If you are using the GPS_ONLY | IPS_AND_GPS mode for navigation you call method to notify the library. This increases the frequency of GPS location updates.
+* setAlias(String key, String value) - Sets an alias
+* setServiceNotificationInfo(String notificationText, int serviceIcon) - Sets the notification text and icon for the background service
+
 #### LocationProvider initialization
 
 ```java
-com.expofp.crowdconnected.Settings lpSettings = new com.expofp.crowdconnected.Settings("APP_KEY", "TOKEN", "SECRET", Mode.IPS_ONLY);
+com.expofp.crowdconnected.Settings lpSettings = new com.expofp.crowdconnected.Settings("APP_KEY", "TOKEN", "SECRET", MODE);
 LocationProvider locationProvider = new com.expofp.crowdconnected.CrowdConnectedProvider(getApplication(), lpSettings);
+```
+
+#### Background mode
+
+IMPORTANT! To run the location provider in the background, you must specify NOTIFICATION_TEXT and SERVICE_ICON (to do this, you need to call Settings.setServiceNotificationInfo("NOTIFICATION_TEXT", SERVICE_ICON)).
+
+```java
+com.expofp.crowdconnected.Settings lpSettings = new com.expofp.crowdconnected.Settings("APP_KEY", "TOKEN", "SECRET", MODE);
+lpSettings.setServiceNotificationInfo("NOTIFICATION_TEXT", SERVICE_ICON);
+LocationProvider locationProvider = new com.expofp.crowdconnected.CrowdConnectedProvider(getApplication(), lpSettings);
+
+GlobalLocationProvider.init(locationProvider);
+GlobalLocationProvider.start();
 ```
 
 #### Recommended use
 
 When using CrowdConnectedProvider, it is recommended to run it in the background (when the program starts) using the [GlobalLocationProvider](#4.2.14-global-location-provider).
 
+IMPORTANT! To run the location provider in the background, you must specify NOTIFICATION_TEXT and SERVICE_ICON (to do this, you need to call Settings.setServiceNotificationInfo("NOTIFICATION_TEXT", SERVICE_ICON)).
+
 ```java
-com.expofp.crowdconnected.Settings lpSettings = new com.expofp.crowdconnected.Settings("APP_KEY", "TOKEN", "SECRET", Mode.IPS_ONLY);
+com.expofp.crowdconnected.Settings lpSettings = new com.expofp.crowdconnected.Settings("APP_KEY", "TOKEN", "SECRET", MODE);
+lpSettings.setServiceNotificationInfo("NOTIFICATION_TEXT", SERVICE_ICON);
 LocationProvider locationProvider = new com.expofp.crowdconnected.CrowdConnectedProvider(getApplication(), lpSettings);
 
 GlobalLocationProvider.init(locationProvider);
@@ -610,7 +662,7 @@ GlobalLocationProvider.stop();
 #### Aliases
 
 ```java
-com.expofp.crowdconnected.Settings lpSettings = new com.expofp.crowdconnected.Settings("APP_KEY", "TOKEN", "SECRET", Mode.IPS_ONLY);
+com.expofp.crowdconnected.Settings lpSettings = new com.expofp.crowdconnected.Settings("APP_KEY", "TOKEN", "SECRET", MODE);
 lpSettings.setAlias("KEY_1", "VALUE_1");
 lpSettings.setAlias("KEY_2", "VALUE_2");
 LocationProvider locationProvider = new com.expofp.crowdconnected.CrowdConnectedProvider(getApplication(), lpSettings);
@@ -619,7 +671,7 @@ LocationProvider locationProvider = new com.expofp.crowdconnected.CrowdConnected
 #### Notification settings
 
 ```java
-com.expofp.crowdconnected.Settings lpSettings = new com.expofp.crowdconnected.Settings("APP_KEY", "TOKEN", "SECRET", Mode.IPS_ONLY);
+com.expofp.crowdconnected.Settings lpSettings = new com.expofp.crowdconnected.Settings("APP_KEY", "TOKEN", "SECRET", MODE);
 lpSettings.setServiceNotificationInfo("NOTIFICATION_TEXT", SERVICE_ICON);
 LocationProvider locationProvider = new com.expofp.crowdconnected.CrowdConnectedProvider(getApplication(), lpSettings);
 ```
