--- a/android-sdk/4.2.14.md
+++ b/android-sdk/4.2.14.md
@@ -360,15 +360,15 @@ public void onDirection(@Nullable Route route) {
 
 ##### com.expofp.fplan.Route properties:
 
-* from(RouteBooth) - start booth
-* to(RouteBooth) - destination booth
-* distance(String) - information about distances, for example: 15m
-* time(int) - estimated time to final destination booth in seconds
+* `from(RouteBooth) - start booth`
+* `to(RouteBooth) - destination booth`
+* `distance(String) - information about distances, for example: 15m`
+* `time(int) - estimated time to final destination booth in seconds`
 
 ##### com.expofp.fplan.RouteBooth properties:
 
-* id(String) - booth id
-* name(String) - booth name
+* `id(String) - booth id`
+* `name(String) - booth name`
 
 #### Receive message event
 Currently not in use.
@@ -390,10 +390,10 @@ public void onDetails(@Nullable Details details) {
 
 ##### Details properties:
 
-* type(String) - 	"booth" | "exhibitor" | "route"
-* id(String) - 		booth id | exhibitor id | null for route
-* name(String) - 	booth name | exhibitor name | null for route
-* externalId(String) -  booth externalId | exhibitor externalId | null for route
+* `type(String) - "booth" | "exhibitor" | "route"`
+* `id(String) - booth id | exhibitor id | null for route`
+* `name(String) - booth name | exhibitor name | null for route`
+* `externalId(String) - booth externalId | exhibitor externalId | null for route`
 
 
 #### Exhibitor custom button click event
@@ -596,17 +596,17 @@ Add permissions in "AndroidManifest.xml" file:
 
 Constructor parameters: 
 
-* appKey(String) -  Your Crowd Connected App Key
-* token(String) - Your Crowd Connected Token
-* secret(String) - Your Crowd Connected Secret
-* mode(Mode) - IPS_ONLY | GPS_ONLY | IPS_AND_GPS
-* aliases(Map<String, String>) - Aliases
+* `appKey(String) -  Your Crowd Connected App Key`
+* `token(String) - Your Crowd Connected Token`
+* `secret(String) - Your Crowd Connected Secret`
+* `mode(Mode) - IPS_ONLY | GPS_ONLY | IPS_AND_GPS`
+* `aliases(Map<String, String>) - Aliases`
 
 Functions:
 
-* enableNavigation() - If you are using the GPS_ONLY | IPS_AND_GPS mode for navigation you call method to notify the library. This increases the frequency of GPS location updates.
-* setAlias(String key, String value) - Sets an alias
-* setServiceNotificationInfo(String notificationText, int serviceIcon) - Sets the notification text and icon for the background service
+* `enableNavigation() - If you are using the GPS_ONLY | IPS_AND_GPS mode for navigation you call method to notify the library. This increases the frequency of GPS location updates.`
+* `setAlias(String key, String value) - Sets an alias`
+* `setServiceNotificationInfo(String notificationText, int serviceIcon) - Sets the notification text and icon for the background service`
 
 #### LocationProvider initialization
 
@@ -617,7 +617,8 @@ LocationProvider locationProvider = new com.expofp.crowdconnected.CrowdConnected
 
 #### Background mode
 
-IMPORTANT! To run the location provider in the background, you must specify NOTIFICATION_TEXT and SERVICE_ICON (to do this, you need to call Settings.setServiceNotificationInfo("NOTIFICATION_TEXT", SERVICE_ICON)).
+> [!IMPORTANT] 
+> To run the location provider in the background, you must specify NOTIFICATION_TEXT and SERVICE_ICON (to do this, you need to call Settings.setServiceNotificationInfo("NOTIFICATION_TEXT", SERVICE_ICON)).
 
 ```java
 com.expofp.crowdconnected.Settings lpSettings = new com.expofp.crowdconnected.Settings("APP_KEY", "TOKEN", "SECRET", MODE);
@@ -632,7 +633,8 @@ GlobalLocationProvider.start();
 
 When using CrowdConnectedProvider, it is recommended to run it in the background (when the program starts) using the [GlobalLocationProvider](#4.2.14-global-location-provider).
 
-IMPORTANT! To run the location provider in the background, you must specify NOTIFICATION_TEXT and SERVICE_ICON (to do this, you need to call Settings.setServiceNotificationInfo("NOTIFICATION_TEXT", SERVICE_ICON)).
+> [!IMPORTANT]
+> To run the location provider in the background, you must specify NOTIFICATION_TEXT and SERVICE_ICON (to do this, you need to call Settings.setServiceNotificationInfo("NOTIFICATION_TEXT", SERVICE_ICON)).
 
 ```java
 com.expofp.crowdconnected.Settings lpSettings = new com.expofp.crowdconnected.Settings("APP_KEY", "TOKEN", "SECRET", MODE);
