--- a/ios-sdk/4.2.20.md
+++ b/ios-sdk/4.2.20.md
@@ -261,6 +261,18 @@ fplanUiView.setOnBuildDirectionCallback { direction in
 }
 ```
 
+##### Direction properties:
+
+* `from(DirectionBooth) - start booth`
+* `to(DirectionBooth) - destination booth`
+* `distance(String) - information about distances, for example: 15m`
+* `time(TimeInterval) - estimated time to final destination booth in seconds`
+
+##### DirectionBooth properties:
+
+* `id(String) - booth id`
+* `name(String) - booth name`
+
 ### Details open event
 
 This event is called when opening a panel with information, it can be a panel with information about an open booth, a route, etc.
@@ -271,6 +283,13 @@ fplanUiView.setOnDetailsClickCallback { details in
    print(details)
 }
 ```
+
+##### Details properties:
+
+* `type(String) - "booth" | "exhibitor" | "route"`
+* `id(Int) - booth id | exhibitor id | null for route`
+* `name(String) - booth name | exhibitor name | null for route`
+* `externalId(String) - booth externalId | exhibitor externalId | null for route`
 
 ### Exhibitor custom button click event
 
@@ -615,6 +634,18 @@ struct FplanApp: App {
 }
 ```
 
+##### Direction properties:
+
+* `from(DirectionBooth) - start booth`
+* `to(DirectionBooth) - destination booth`
+* `distance(String) - information about distances, for example: 15m`
+* `time(TimeInterval) - estimated time to final destination booth in seconds`
+
+##### DirectionBooth properties:
+
+* `id(String) - booth id`
+* `name(String) - booth name`
+
 ### Details open event
 This event is called when opening a panel with information, it can be a panel with information about an open booth, a route, etc.
 
@@ -646,6 +677,13 @@ struct FplanApp: App {
     }
 }
 ```
+
+##### Details properties:
+
+* `type(String) - "booth" | "exhibitor" | "route"`
+* `id(Int) - booth id | exhibitor id | null for route`
+* `name(String) - booth name | exhibitor name | null for route`
+* `externalId(String) - booth externalId | exhibitor externalId | null for route`
 
 ### Exhibitor custom button click event
 This event is called after clicking a custom button in the panel with information about the exhibitor.
