--- a/android-sdk/4.2.14.md
+++ b/android-sdk/4.2.14.md
@@ -319,6 +319,45 @@ _fplanView.selectCurrentPosition(2875, 1734);
 _fplanView.clear();
 ```
 
+#### Get exhibitor list
+
+```java
+_fplanView.exhibitorsList(exhibitors -> {});
+```
+
+##### com.expofp.fplan.Exhibitor properties:
+
+* `id(int) - exhibitor id`
+* `name(String) - exhibitor name`
+* `externalId(String) - exhibitor external id`
+* `booths(int[]) - booth ids`
+
+#### Get category list
+
+```java
+_fplanView.categoriesList(categories -> {});
+```
+
+##### com.expofp.fplan.Category properties:
+
+* `id(int) - category id`
+* `name(String) - category name`
+* `exhibitors(int[]) - exhibitor ids`
+
+#### Get booth list
+
+```java
+_fplanView.boothsList(booths -> {});
+```
+
+##### com.expofp.fplan.Booth properties:
+
+* `id(int) - booth id`
+* `name(String) - booth name`
+* `externalId(String) - booth external id`
+* `isSpecial(Boolean) - true if booth is special`
+* `exhibitors(int[]) - exhibitor ids`
+
 ## Events<a id='4.2.14-events'></a>
 
 #### Floor plan ready event
