--- a/ios-sdk/4.2.20.md
+++ b/ios-sdk/4.2.20.md
@@ -177,47 +177,89 @@ fplanUiView.load("https://demo.expofp.com/", settings: Settings(locationProvider
 
 ## Functions<a id='4.2.20-uikit-functions'></a>
 
-Open plan:
+#### Open plan:
 
 ```swift
 fplanUiView.load("https://demo.expofp.com")
 ```
 
-Stop UIFplanView:
+#### Stop UIFplanView:
 
 ```swift
 fplanUiView.destoy()
 ```
 
-Select booth:
+#### Select booth:
 
 ```swift
 fplanUiView.selectBooth("720")
 ```
 
-Select exhibitor:
+#### Select exhibitor:
 
 ```swift
 fplanUiView.selectExhibitor("RPMXPO")
 ```
 
-Build route:
+#### Build route:
 
 ```swift
 fplanUiView.selectRoute(Route(from: "720", to: "751", exceptInaccessible: false))
 ```
 
-Set current position(Blue-dot):
+#### Set current position(Blue-dot):
 
 ```swift
 fplanUiView.setCurrentPosition(BlueDotPoint(x: 22270, y: 44900), true)
 ```
 
-Clear floor plan:
+#### Clear floor plan:
 
 ```swift
 fplanUiView.clear()
 ```
+
+#### Get exhibitor list
+
+```java
+fplanUiView.exhibitorsList { exhibitors in
+}
+```
+
+##### Exhibitor properties:
+
+* `id(Int) - exhibitor id`
+* `name(String) - exhibitor name`
+* `externalId(String) - exhibitor external id`
+* `booths([Int]) - booth ids`
+
+#### Get category list
+
+```java
+fplanUiView.categoriesList { categories in
+}
+```
+
+##### Category properties:
+
+* `id(Int) - category id`
+* `name(String) - category name`
+* `exhibitors([Int]) - exhibitor ids`
+
+#### Get booth list
+
+```java
+fplanUiView.boothsList { booths in
+}
+```
+
+##### Booth properties:
+
+* `id(Int) - booth id`
+* `name(String) - booth name`
+* `externalId(String) - booth external id`
+* `isSpecial(Bool) - true if booth is special`
+* `exhibitors([Int]) - exhibitor ids`
 
 ## Events<a id='4.2.20-uikit-events'></a>
 
@@ -498,47 +540,90 @@ fplanView.load("https://demo.expofp.com/", settings: Settings(locationProvider: 
 
 ## Functions<a id='4.2.20-swiftui-functions'></a>
 
-Open plan:
+##### Open plan:
 
 ```swift
 fplanView.load("https://demo.expofp.com")
 ```
 
-Stop FplanView:
+##### Stop FplanView:
 
 ```swift
 fplanView.destoy()
 ```
 
-Select booth:
+##### Select booth:
 
 ```swift
 fplanView.selectBooth("720")
 ```
 
-Select exhibitor:
+##### Select exhibitor:
 
 ```swift
 fplanView.selectExhibitor("RPMXPO")
 ```
 
-Build route:
+##### Build route:
 
 ```swift
 fplanView.selectRoute(Route(from: "720", to: "751", exceptInaccessible: false))
 ```
 
-Set current position(Blue-dot):
+##### Set current position(Blue-dot):
 
 ```swift
 fplanView.setCurrentPosition(BlueDotPoint(x: 22270, y: 44900), true)
 ```
 
-Clear floor plan:
+##### Clear floor plan:
 
 ```swift
 fplanView.clear()
 ```
+
+#### Get exhibitor list
+
+```java
+fplanView.exhibitorsList { exhibitors in
+}
+```
+
+##### Exhibitor properties:
+
+* `id(Int) - exhibitor id`
+* `name(String) - exhibitor name`
+* `externalId(String) - exhibitor external id`
+* `booths([Int]) - booth ids`
+
+#### Get category list
+
+```java
+fplanView.categoriesList { categories in
+}
+```
+
+##### Category properties:
+
+* `id(Int) - category id`
+* `name(String) - category name`
+* `exhibitors([Int]) - exhibitor ids`
+
+#### Get booth list
+
+```java
+fplanView.boothsList { booths in
+}
+```
+
+##### Booth properties:
+
+* `id(Int) - booth id`
+* `name(String) - booth name`
+* `externalId(String) - booth external id`
+* `isSpecial(Bool) - true if booth is special`
+* `exhibitors([Int]) - exhibitor ids`
+
 ## Events<a id='4.2.20-swiftui-events'></a>
 
 ### Floor plan ready event
@@ -899,6 +984,21 @@ Permissions(in Info.plist file):
 ```swift
 let locationProvider: LocationProvider = CrowdConnectedProvider(Settings("APP_KEY", "TOKEN", "SECRET"))
 ```
+
+#### Settings
+
+Constructor parameters: 
+
+* `appKey(String) -  Your Crowd Connected App Key`
+* `token(String) - Your Crowd Connected Token`
+* `secret(String) - Your Crowd Connected Secret`
+* `mode(Mode) - IPS_ONLY | GPS_ONLY | IPS_AND_GPS`
+* `aliases([String: String]) - Aliases`
+* `enableNavigation([Bool]) - if true this increases the frequency of GPS location updates.`
+
+Functions:
+
+* `addAlias(String key, String value) - add alias`
 
 ### Recommended use
 
