--- a/ios-sdk/4.4.1.md
+++ b/ios-sdk/4.4.1.md
@@ -30,7 +30,7 @@ parent: iOS SDK
 
 ## What's New in ExpoFP Fplan version 4.4.1<a id='4.4.1-what-is-new'></a>
 
-The ability to download packages from SPM has been added.
+FloorPlanBooth and FloorPlanBoothBase parametrs was added.
 
 ## Installation<a id='4.4.1-installation'></a>
 
