--- a/ios-sdk/4.4.2.md
+++ b/ios-sdk/4.4.2.md
@@ -30,7 +30,7 @@ parent: iOS SDK
 
 ## What's New in ExpoFP Fplan version 4.4.2<a id='4.4.2-what-is-new'></a>
 
-The ability to download packages from SPM has been added.
+Privacy manifest file was added.
 
 ## Installation<a id='4.4.2-installation'></a>
 
