--- a/ios-sdk/4.4.5.md
+++ b/ios-sdk/4.4.5.md
@@ -30,7 +30,7 @@ parent: iOS SDK
 
 ## What's New in ExpoFP Fplan version 4.4.5<a id='4.4.5-what-is-new'></a>
 
-Privacy manifest file was updated.
+ExpoFpFplan package: a public constructor has been added to the Bookmark structure
 
 ## Installation<a id='4.4.5-installation'></a>
 
