--- a/android-sdk/4.4.3.md
+++ b/android-sdk/4.4.3.md
@@ -664,6 +664,10 @@ Add permissions in "AndroidManifest.xml" file:
 <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 <uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
 <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
+
+<uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+<uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+<uses-permission android:name="android.permission.FOREGROUND_SERVICE_LOCATION" />
 ```
 
 #### com.expofp.crowdconnected.Settings
