--- a/android-sdk/4.5.2.md
+++ b/android-sdk/4.5.2.md
@@ -23,7 +23,8 @@ nav_order: 73
 
 ## What's New in ExpoFP Fplan version 4.5.2<a id='4.5.2-what-is-new'></a>
 
-CrowdConnected packages have been updated to version 1.5.2. The target Android Api(targetSdk) version has been changed to 34.
+Functions selectCategory, getVisibility, setVisibility, findLocation, zoomIn, zoomOut, switchView, fitBounds was added.
+The ability to specify a point(SelectRoutePoint class) as a starting point or destination point in the 'selectRoute()' function has been added.
 
 ## Setup<a id='4.5.2-setup'></a>
 
