--- a/ios-sdk/4.5.2.md
+++ b/ios-sdk/4.5.2.md
@@ -30,7 +30,8 @@ parent: iOS SDK
 
 ## What's New in ExpoFP Fplan version 4.5.2<a id='4.5.2-what-is-new'></a>
 
-ExpoFpFplan package: a public constructor has been added to the Bookmark structure
+Functions selectCategory, getVisibility, setVisibility, findLocation, zoomIn, zoomOut, switchView, fitBounds was added.
+The ability to specify a point(SelectRoutePoint class) as a starting point or destination point in the 'selectRoute()' function has been added.
 
 ## Installation<a id='4.5.2-installation'></a>
 
