--- a/ios-sdk/4.5.16.md
+++ b/ios-sdk/4.5.16.md
@@ -30,7 +30,7 @@ parent: iOS SDK
 
 ## What's New in ExpoFP Fplan version 4.5.16<a id='4.5.16-what-is-new'></a>
 
-The ability to specify GPS coordinates in the selectRoute method has been added.
+The ability to specify an array of IDs in the selectExhibitor method has been added.
 
 ## Installation<a id='4.5.16-installation'></a>
 
