--- a/android-sdk/4.8.1.md
+++ b/android-sdk/4.8.1.md
@@ -23,7 +23,7 @@ nav_order: 68
 
 ## What's New in ExpoFP Fplan version 4.8.1<a id='4.8.1-what-is-new'></a>
 
-The ability to specify array in the selectExhibitor method has been added.
+Added new features and events, updated packages from CrowdConnected to version 2.0.2.
 
 ## Setup<a id='4.8.1-setup'></a>
 
