--- a/android-sdk/4.8.1.md
+++ b/android-sdk/4.8.1.md
@@ -180,7 +180,7 @@ _fplanView.downloadZipToCache("https://demo.expofp.com", new DownloadZipToCacheC
 _fplanView.openFile(htmlFilePath, "?noOverlay=true", settings);
 ```
 
-## Recommended use
+#### Recommended use
 
 It is recommended to run the 'downloadZipToCache' function once when starting the application. 
 The 'downloadZipToCache' function checks the plan version on the server and if it has changed, it starts downloading. 
