--- a/android-sdk/4.8.1.md
+++ b/android-sdk/4.8.1.md
@@ -159,7 +159,7 @@ _fplanView.destroy();
 
 ExpoFP SDK provides the following offline modes:
 
-1. Preloading a plan into cache. The 'downloadZipToCache' method allows to download an offline version of the plan into cache.
+### 1. Preloading a plan into cache. The 'downloadZipToCache' method allows to download an offline version of the plan into cache.
 
 Example:
 
@@ -249,7 +249,7 @@ public class MainActivity extends AppCompatActivity {
 }
 ```
 
-2. Opening a zip archive with a plan - you can download the plan archive from the "Integration options" page (windows section), 
+### 2. Opening a zip archive with a plan - you can download the plan archive from the "Integration options" page (windows section), 
 add this archive to your application (assets) and then open this plan using the "openZipFromAssets()" function. 
 
 Example:
