--- a/android-sdk/4.8.1.md
+++ b/android-sdk/4.8.1.md
@@ -615,7 +615,8 @@ public void onBoothClick(@Nullable FloorPlanBoothBase booth) {
 * `description(String) - description`
 
 #### Current position changed event
-This event is called when the route is successfully built.
+
+Event called when the position of the Blue-dot changes.
 
 ```java
 @Override
