--- a/ios-sdk/4.8.6.md
+++ b/ios-sdk/4.8.6.md
@@ -8,6 +8,7 @@ parent: iOS SDK
 
 ## Table of Contents
 * [What's New](#4.8.6-what-is-new)
+* [Recommendations for use](#4.8.6-recommendations)
 * [Installation](#4.8.6-installation)
 * [UIKit](#4.8.6-uikit)
     * [Usage](#4.8.6-uikit-usage)
