--- a/ios-sdk/4.8.6.md
+++ b/ios-sdk/4.8.6.md
@@ -38,7 +38,7 @@ The 'search()' method was added, the initialization procedure of the CrowdConnec
 The Fplan should be opened once when the application is launched, then the Fplan should be hidden until it is needed. 
 Interaction with the Fplan should only occur using functions (selectBooth(), selectExhibitor(), etc.) and events (onFpReady, onBoothClick, etc.).
 
-Example: https://github.com/expofp/expofp-demo-ios
+Example: <https://github.com/expofp/expofp-demo-ios>
 
 ```swift
 import SwiftUI
