--- a/android-sdk/4.9.3.md
+++ b/android-sdk/4.9.3.md
@@ -39,13 +39,9 @@ SharedFplanView.preload("https://demo.expofp.com", new Settings(), getApplicatio
 
 The load method is used to display the plan:
 ```java
+sharedFplanView = findViewById(R.id.sharedFplanView);
 sharedFplanView.load("https://demo.expofp.com", settings);
 ```
-
-[Important!] It is recommended to create a SharedFplanView instance each time you want to display a plan (and call the 'sharedFplanView.load()' method). 
-After finishing working with the plan, you must call the 'sharedFplanView.destroy()' method. 
-After calling the 'sharedFplanView.destroy()' method, the plan will continue to work in the background. 
-To display the plan again, you must create a new SharedFplanView instance and call the 'sharedFplanView.load()' method.
 
 ## Setup<a id='4.9.3-setup'></a>
 
