--- a/ios-sdk/4.8.14.md
+++ b/ios-sdk/4.8.14.md
@@ -38,8 +38,14 @@ SharedFplanView(SwiftUI) and SharedUIFplanView(UIKit) has been added.
 It is recommended to use the SharedFplanView control instead of the FplanView for SwiftUI and SharedUIFplanView instead of UIFplanView for UIKit.
 You can start plan preloading at application startup using static method SharedFplanView.preload(SharedUIFplanView.preload for UIKit):
 
+SwiftUI:
 ```swift
 SharedFplanView.preload("https://demo.expofp.com?noOverlay=true", settings: Settings())
+```
+
+UIKit:
+```swift
+SharedUIFplanView.preload("https://demo.expofp.com?noOverlay=true", settings: Settings())
 ```
 
 ## Installation<a id='4.8.14-installation'></a>
