Update and rename 4.8.20.md to 4.8.22.md

--- a/ios-sdk/4.8.22.md
+++ b/ios-sdk/4.8.22.md
@@ -1,39 +1,39 @@
 ---
-title: 4.8.20
+title: 4.8.22
 nav_order: 165
 parent: iOS SDK
 ---
 
-## 4.8.20 version<a id='4.8.20'></a>
+## 4.8.22 version<a id='4.8.22'></a>
 
 ## Table of Contents
-* [What's New](#4.8.20-what-is-new)
-* [Recommendations for use](#4.8.20-recommendations)
-* [Installation](#4.8.20-installation)
-* [UIKit](#4.8.20-uikit)
-    * [Usage](#4.8.20-uikit-usage)
-    * [Offline mode](#4.8.20-uikit-offline)
-    * [Settings сlass](#4.8.20-uikit-settings-class)
-    * [Functions](#4.8.20-uikit-functions)
-    * [Events](#4.8.20-uikit-events)
-    * [Festivals](#4.8.20-uikit-fest)
-* [SwiftUI](#4.8.20-swiftui)
-    * [Usage](#4.8.20-swiftui-usage)
-    * [Offline mode](#4.8.20-swiftui-offline)
-    * [Settings сlass](#4.8.20-swiftui-settings-class)
-    * [Functions](#4.8.20-swiftui-functions)
-    * [Events](#4.8.20-swiftui-events)
-    * [Festivals](#4.8.20-swiftui-fest)
-* [Navigation](#4.8.20-navigation)
-* [GlobalLocationProvider](#4.8.20-global-location-provider)
-* [CrowdConnected location provider](#4.8.20-cc-navigation)
-* [IndoorAtlas location provider](#4.8.20-ia-navigation)
+* [What's New](#4.8.22-what-is-new)
+* [Recommendations for use](#4.8.22-recommendations)
+* [Installation](#4.8.22-installation)
+* [UIKit](#4.8.22-uikit)
+    * [Usage](#4.8.22-uikit-usage)
+    * [Offline mode](#4.8.22-uikit-offline)
+    * [Settings сlass](#4.8.22-uikit-settings-class)
+    * [Functions](#4.8.22-uikit-functions)
+    * [Events](#4.8.22-uikit-events)
+    * [Festivals](#4.8.22-uikit-fest)
+* [SwiftUI](#4.8.22-swiftui)
+    * [Usage](#4.8.22-swiftui-usage)
+    * [Offline mode](#4.8.22-swiftui-offline)
+    * [Settings сlass](#4.8.22-swiftui-settings-class)
+    * [Functions](#4.8.22-swiftui-functions)
+    * [Events](#4.8.22-swiftui-events)
+    * [Festivals](#4.8.22-swiftui-fest)
+* [Navigation](#4.8.22-navigation)
+* [GlobalLocationProvider](#4.8.22-global-location-provider)
+* [CrowdConnected location provider](#4.8.22-cc-navigation)
+* [IndoorAtlas location provider](#4.8.22-ia-navigation)
 
-## What's New in ExpoFP Fplan version 4.8.20<a id='4.8.20-what-is-new'></a>
+## What's New in ExpoFP Fplan version 4.8.22<a id='4.8.22-what-is-new'></a>
 
-Dependency on CrowdConnected SDK 1.6.7 for SPM and 1.6.6 for CocoaPods is specified
+This version of SDK specifies dependencies on CrowdConnected SDK 1.6.7 for CocoaPods and SPM
 
-## Recommendations for use<a id='4.8.20-recommendations'></a>
+## Recommendations for use<a id='4.8.22-recommendations'></a>
 
 It is recommended to use the SharedFplanView control instead of the FplanView for SwiftUI and SharedUIFplanView instead of UIFplanView for UIKit.
 You can start plan preloading at application startup using static method SharedFplanView.preload(SharedUIFplanView.preload for UIKit):
@@ -48,21 +48,21 @@ UIKit:
 SharedUIFplanView.preload("https://demo.expofp.com?noOverlay=true", settings: Settings())
 ```
 
-## Installation<a id='4.8.20-installation'></a>
+## Installation<a id='4.8.22-installation'></a>
 
 Cocoapods:
 
 ```swift
-pod 'ExpoFpFplan', '4.8.20'
+pod 'ExpoFpFplan', '4.8.22'
 ```
 
 SPM: <https://github.com/expofp/expofp-fplan-ios-spm>
 
-# UIKit<a id='4.8.20-uikit'></a>
+# UIKit<a id='4.8.22-uikit'></a>
 
 This documentation block describes all the features and functions of ExpoFP SDK for the UIKit platform.
 
-## Usage<a id='4.8.20-uikit-usage'></a>
+## Usage<a id='4.8.22-uikit-usage'></a>
 
 ### Init UIFplanView
 
@@ -98,7 +98,7 @@ To do this, you need to call the 'destroy' function:
 fplanUiView.destoy()
 ```
 
-## Offline mode<a id='4.8.20-uikit-offline'></a>
+## Offline mode<a id='4.8.22-uikit-offline'></a>
 
 ExpoFP SDK provides the following offline modes:
 
@@ -117,19 +117,19 @@ Open save plan:
 fplanUiView.openFileFromCache(params: "?noOverlay=true", settings: Settings())
 ```
 
-## Settings сlass<a id='4.8.20-uikit-settings-class'></a>
+## Settings сlass<a id='4.8.22-uikit-settings-class'></a>
 
 The Settings class contains all the parameters necessary for the initialization and operation of the plan.
 
 ### Parameters passed to the constructor
 
-- locationProvider(LocationProvider, optional) - [location provider](#4.8.20-navigation). The default value for this parameter is nil.
+- locationProvider(LocationProvider, optional) - [location provider](#4.8.22-navigation). The default value for this parameter is nil.
 
 ```swift
 fplanUiView.load("https://demo.expofp.com/", settings: Settings(locationProvider: GpsProvider()))
 ```
 
-- useGlobalLocationProvider(boolean) - a parameter indicating that the [global location provider](#4.8.20-global-location-provider) should be used.
+- useGlobalLocationProvider(boolean) - a parameter indicating that the [global location provider](#4.8.22-global-location-provider) should be used.
   The default value for this parameter is false.
 
 ```swift
@@ -149,7 +149,7 @@ fplanUiView.load("https://demo.expofp.com/", settings: Settings(locationProvider
 fplanUiView.load("https://demo.expofp.com/", settings: Settings(locationProvider: GpsProvider(), focusOnFirstLocation: true))
 ```
 
-## Functions<a id='4.8.20-uikit-functions'></a>
+## Functions<a id='4.8.22-uikit-functions'></a>
 
 #### Open plan:
 
@@ -402,7 +402,7 @@ fplanUiView.getOptimizedRoutes(routeWaypoints: [RouteWaypoint]) {routes in
 * `z(String) - Z(layer)`
 * `zValueIsDigit(Bool) - Indicates whether the value 'z' is a number`
 
-## Events<a id='4.8.20-uikit-events'></a>
+## Events<a id='4.8.22-uikit-events'></a>
 
 ### Floor plan ready event
 
@@ -568,7 +568,7 @@ fplanUiView.setOnCurrentPositionChangedCallback { blueDotPoint in
 * `longitude(Double) - Longitude`
 
 
-## Festivals<a id='4.8.20-uikit-fest'></a>
+## Festivals<a id='4.8.22-uikit-fest'></a>
 
 ### Init UIFplanView
 
@@ -624,11 +624,11 @@ fplanUiView.setOnFestMoreDetailsClickCallback { id in
 }
 ```
 
-# SwiftUI<a id='4.8.20-swiftui'></a>
+# SwiftUI<a id='4.8.22-swiftui'></a>
 
 This documentation block describes all the features and functions of ExpoFP SDK for the SwiftUI platform.
 
-## Usage<a id='4.8.20-swiftui-usage'></a>
+## Usage<a id='4.8.22-swiftui-usage'></a>
 
 ### Init FplanView
 
@@ -666,7 +666,7 @@ To do this, you need to call the 'destroy' function:
 fplanView.destoy()
 ```
 
-## Offline mode<a id='4.8.20-swiftui-offline'></a>
+## Offline mode<a id='4.8.22-swiftui-offline'></a>
 
 ExpoFP SDK provides the following offline modes:
 
@@ -723,19 +723,19 @@ struct FplanApp: App {
 }
 ```
 
-## Settings сlass<a id='4.8.20-swiftui-settings-class'></a>
+## Settings сlass<a id='4.8.22-swiftui-settings-class'></a>
 
 The Settings class contains all the parameters necessary for the initialization and operation of the plan.
 
 ### Parameters passed to the constructor
 
-- locationProvider(LocationProvider, optional) - [location provider](#4.8.20-navigation). The default value for this parameter is nil.
+- locationProvider(LocationProvider, optional) - [location provider](#4.8.22-navigation). The default value for this parameter is nil.
 
 ```swift
 fplanView.load("https://demo.expofp.com/", settings: Settings(locationProvider: GpsProvider()))
 ```
 
-- useGlobalLocationProvider(boolean) - a parameter indicating that the [global location provider](#4.8.20-global-location-provider) should be used. 
+- useGlobalLocationProvider(boolean) - a parameter indicating that the [global location provider](#4.8.22-global-location-provider) should be used. 
   The default value for this parameter is false.
 
 ```swift
@@ -755,7 +755,7 @@ fplanView.load("https://demo.expofp.com/", settings: Settings(locationProvider: 
 fplanView.load("https://demo.expofp.com/", settings: Settings(locationProvider: GpsProvider(), focusOnFirstLocation: true))
 ```
 
-## Functions<a id='4.8.20-swiftui-functions'></a>
+## Functions<a id='4.8.22-swiftui-functions'></a>
 
 ##### Open plan:
 
@@ -998,7 +998,7 @@ fplanView.getOptimizedRoutes(routeWaypoints: [RouteWaypoint]) {routes in
 * `z(String) - Z(layer)`
 * `zValueIsDigit(Bool) - Indicates whether the value 'z' is a number`
 
-## Events<a id='4.8.20-swiftui-events'></a>
+## Events<a id='4.8.22-swiftui-events'></a>
 
 ### Floor plan ready event
 This event is called when the plan initialization process has successfully completed.
@@ -1326,7 +1326,7 @@ struct FplanApp: App {
 * `latitude(Double) - Latitude`
 * `longitude(Double) - Longitude`
 
-## Festivals<a id='4.8.20-swiftui-fest'></a>
+## Festivals<a id='4.8.22-swiftui-fest'></a>
 
 ### Init FplanView
 
@@ -1429,7 +1429,7 @@ struct FplanApp: App {
 }
 ```
 
-## Navigation<a id='4.8.20-navigation'></a>
+## Navigation<a id='4.8.22-navigation'></a>
 
 > [!IMPORTANT] Before using third-party coordinate providers(CrowdConnected or IndoorAtlas), the 'GPS/IPS from 3rd party' option must be activated:
 
@@ -1444,7 +1444,7 @@ fplanView.load(URL, locationProvider: locationProvider)
 
 The second way is to run in the background using GlobalLocationProvider when the program starts.
 
-## GlobalLocationProvider<a id='4.8.20-global-location-provider'></a>
+## GlobalLocationProvider<a id='4.8.22-global-location-provider'></a>
 
 Very often needed to run a location provider in the background, ExpoFP SDK has a GlobalLocationProvider for this. The GlobalLocationProvider runs once at program startup and work in the background.
 
@@ -1472,14 +1472,14 @@ When the program terminates, the GlobalLocationProvider must also be stopped:
 GlobalLocationProvider.stop();
 ```
 
-## CrowdConnected location provider<a id='4.8.20-cc-navigation'></a>
+## CrowdConnected location provider<a id='4.8.22-cc-navigation'></a>
 
 ### Setup
 
 Сocoapods:
 
 ```swift
-pod 'ExpoFpCrowdConnected', '4.8.20'
+pod 'ExpoFpCrowdConnected', '4.8.22'
 ```
 
 SPM: <https://github.com/expofp/expofp-crowdconnected-ios-spm>
@@ -1531,7 +1531,7 @@ Functions:
 
 ### Recommended use
 
-When using CrowdConnectedProvider, it is recommended to run it in the background (when the program starts) using the [GlobalLocationProvider](#4.8.20-global-location-provider).
+When using CrowdConnectedProvider, it is recommended to run it in the background (when the program starts) using the [GlobalLocationProvider](#4.8.22-global-location-provider).
 
 ```swift
 let locationProvider: LocationProvider = CrowdConnectedProvider(Settings("APP_KEY", "TOKEN", "SECRET"))
@@ -1566,14 +1566,14 @@ settings.addAlias("KEY_2", "VALUE_2")
 let locationProvider: LocationProvider = CrowdConnectedProvider(settings)
 ```
 
-## IndoorAtlas location provider<a id='4.8.20-ia-navigation'></a>
+## IndoorAtlas location provider<a id='4.8.22-ia-navigation'></a>
 
 ### Setup
 
 Сocoapods:
 
 ```swift
-pod 'ExpoFpIndoorAtlas', '4.8.20'
+pod 'ExpoFpIndoorAtlas', '4.8.22'
 ```
 
 SPM: <https://github.com/expofp/expofp-indooratlas-ios-spm>
