--- a/android-sdk/4.10.4.md
+++ b/android-sdk/4.10.4.md
@@ -25,7 +25,7 @@ nav_order: 61
 
 ## What's New in ExpoFP Fplan version 4.10.4<a id='4.10.4-what-is-new'></a>
 
-CrowdConnected SDK has been updated to version 2.0.3 and a bug in the ExpoFpFplan package has been fixed.
+ExpoFpFplan package: fix bug in 'openFile' function.
 
 ## Recommendations for use<a id='4.10.4-recommendations'></a>
 
